e2e/__tests__/__snapshots__/test-helpers.test.ts.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test-helpers 1`] = `
  × jest --no-cache
  ↳ exit code: 1
  ===[ STDOUT ]===================================================================
  
  ===[ STDERR ]===================================================================
  PASS ./pass.spec.ts
  FAIL ./fail.spec.ts
    ● Test suite failed to run
  
      TypeScript diagnostics (customize using \`[jest-config].globals.ts-jest.diagnostics\` option):
      fail.spec.ts:7:10 - error TS2554: Expected 0 arguments, but got 1.
  
      7   expect(mocked(foo)('hello')).toBeUndefined()
                 ~~~~~~~~~~~~~~~~~~~~
      fail.spec.ts:9:46 - error TS2345: Argument of type '42' is not assignable to parameter of type 'string'.
  
      9   expect(mocked(bar, true).dummy.deep.deeper(42)).toBeUndefined()
                                                     ~~
  
  Test Suites: 1 failed, 1 passed, 2 total
  Tests:       2 passed, 2 total
  Snapshots:   0 total
  Time:        XXs
  Ran all test suites.
  ================================================================================
`;
